--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,9 +10,16 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    env:
+      HOST: localhost
+      PORT: 5432
+      USER: root
+      PASSWORD: root
+      DBNAME: root
+      
     steps:
     - uses: actions/checkout@v3
-
+    
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
