--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,6 @@ jobs:
     - name: Test
       run: go test -v main_test.go 
       
-  
   build:
     needs: test
     runs-on: 'ubuntu-latest'
@@ -42,3 +41,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: go build -v main.go
+
+  docker:
+    needs: build
+    uses: ./.github/workflows/Docker.yml
