--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -1,1 +1,21 @@
+name: Docker
 
+on:
+  workflow_call:
+
+jobs:
+
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: setup Docker Build
+      uses: docker/setup-buildx-action@v3.7.1
+
+    - name: Docker Registry Login
+      uses: docker/login-action@v3.3.0
+      with:
+        username: brunombento
+        password: 
+          
