--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -17,5 +17,6 @@ jobs:
       uses: docker/login-action@v3.3.0
       with:
         username: brunombento
-        password: 
+        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
+        
           
