--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,6 +42,12 @@ jobs:
     - name: Build
       run: go build -v main.go
 
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.4.3
+      with:
+        name: programa
+        path: main
+
   docker:
     needs: build
     uses: ./.github/workflows/Docker.yml
